# GTASADE-RawMouseFix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.ru.md
.github/DISCUSSION_TEMPLATE/: test-result.yml
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_report.md
config/: SADE.HighFpsRawMouseFix.ini
src/asi/: dllmain.cpp
src/bootstrap/: observe_only_runtime.cpp  observe_only_runtime.h
src/common/: build_fingerprint.cpp  build_fingerprint.h  config.cpp  config.h  csv_trace.cpp  csv_trace.h  file_util.cpp  file_util.h  logger.cpp  logger.h  pe_fingerprint.cpp  pe_fingerprint.h
src/companion/: raw_input_companion.cpp
src/hooks/: iat_hook.cpp  iat_hook.h
src/input/: external_raw_input_shared.h  raw_input_event.h  raw_input_observer.cpp  raw_input_observer.h  raw_input_queue.cpp  raw_input_queue.h
tests/: main.cpp  raw_input_queue_tests.cpp  statistics_tests.cpp  test_assert.h
tools/: analyze_internal_trace.ps1  build.ps1  latest_observe_run.ps1  package_observe_only.ps1  set_observe_profile.ps1  summarize_observe_only.ps1
